src/org/acacia/rdf/sparql/SparqlParser.java
package org.acacia.rdf.sparql;

// $ANTLR 3.5.2 /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g 2015-07-03 14:44:11

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class SparqlParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AND", "ANY", "ASC", "ASK", 
		"ASTERISK", "BASE", "BLANK_NODE_LABEL", "BOUND", "BY", "CLOSE_BRACE", 
		"CLOSE_CURLY_BRACE", "CLOSE_SQUARE_BRACE", "COMMA", "COMMENT", "CONSTRUCT", 
		"DATATYPE", "DECIMAL", "DECIMAL_NEGATIVE", "DECIMAL_POSITIVE", "DESC", 
		"DESCRIBE", "DIGIT", "DISTINCT", "DIVIDE", "DOT", "DOUBLE", "DOUBLE_NEGATIVE", 
		"DOUBLE_POSITIVE", "ECHAR", "EOL", "EQUAL", "EXPONENT", "FALSE", "FILTER", 
		"FROM", "GRAPH", "GREATER", "GREATER_EQUAL", "INTEGER", "INTEGER_NEGATIVE", 
		"INTEGER_POSITIVE", "IRI_REF", "ISBLANK", "ISIRI", "ISLITERAL", "ISURI", 
		"LANG", "LANGMATCHES", "LANGTAG", "LESS", "LESS_EQUAL", "LIMIT", "MINUS", 
		"NAMED", "NOT", "NOT_EQUAL", "OFFSET", "OPEN_BRACE", "OPEN_CURLY_BRACE", 
		"OPEN_SQUARE_BRACE", "OPTIONAL", "OR", "ORDER", "PLUS", "PNAME_LN", "PNAME_NS", 
		"PN_CHARS", "PN_CHARS_BASE", "PN_CHARS_U", "PN_LOCAL", "PN_PREFIX", "PREFIX", 
		"REDUCED", "REFERENCE", "REGEX", "SAMETERM", "SELECT", "SEMICOLON", "STR", 
		"STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", 
		"TRUE", "UNION", "VAR1", "VAR2", "VARNAME", "WHERE", "WS"
	};
	public static final int EOF=-1;
	public static final int A=4;
	public static final int AND=5;
	public static final int ANY=6;
	public static final int ASC=7;
	public static final int ASK=8;
	public static final int ASTERISK=9;
	public static final int BASE=10;
	public static final int BLANK_NODE_LABEL=11;
	public static final int BOUND=12;
	public static final int BY=13;
	public static final int CLOSE_BRACE=14;
	public static final int CLOSE_CURLY_BRACE=15;
	public static final int CLOSE_SQUARE_BRACE=16;
	public static final int COMMA=17;
	public static final int COMMENT=18;
	public static final int CONSTRUCT=19;
	public static final int DATATYPE=20;
	public static final int DECIMAL=21;
	public static final int DECIMAL_NEGATIVE=22;
	public static final int DECIMAL_POSITIVE=23;
	public static final int DESC=24;
	public static final int DESCRIBE=25;
	public static final int DIGIT=26;
	public static final int DISTINCT=27;
	public static final int DIVIDE=28;
	public static final int DOT=29;
	public static final int DOUBLE=30;
	public static final int DOUBLE_NEGATIVE=31;
	public static final int DOUBLE_POSITIVE=32;
	public static final int ECHAR=33;
	public static final int EOL=34;
	public static final int EQUAL=35;
	public static final int EXPONENT=36;
	public static final int FALSE=37;
	public static final int FILTER=38;
	public static final int FROM=39;
	public static final int GRAPH=40;
	public static final int GREATER=41;
	public static final int GREATER_EQUAL=42;
	public static final int INTEGER=43;
	public static final int INTEGER_NEGATIVE=44;
	public static final int INTEGER_POSITIVE=45;
	public static final int IRI_REF=46;
	public static final int ISBLANK=47;
	public static final int ISIRI=48;
	public static final int ISLITERAL=49;
	public static final int ISURI=50;
	public static final int LANG=51;
	public static final int LANGMATCHES=52;
	public static final int LANGTAG=53;
	public static final int LESS=54;
	public static final int LESS_EQUAL=55;
	public static final int LIMIT=56;
	public static final int MINUS=57;
	public static final int NAMED=58;
	public static final int NOT=59;
	public static final int NOT_EQUAL=60;
	public static final int OFFSET=61;
	public static final int OPEN_BRACE=62;
	public static final int OPEN_CURLY_BRACE=63;
	public static final int OPEN_SQUARE_BRACE=64;
	public static final int OPTIONAL=65;
	public static final int OR=66;
	public static final int ORDER=67;
	public static final int PLUS=68;
	public static final int PNAME_LN=69;
	public static final int PNAME_NS=70;
	public static final int PN_CHARS=71;
	public static final int PN_CHARS_BASE=72;
	public static final int PN_CHARS_U=73;
	public static final int PN_LOCAL=74;
	public static final int PN_PREFIX=75;
	public static final int PREFIX=76;
	public static final int REDUCED=77;
	public static final int REFERENCE=78;
	public static final int REGEX=79;
	public static final int SAMETERM=80;
	public static final int SELECT=81;
	public static final int SEMICOLON=82;
	public static final int STR=83;
	public static final int STRING_LITERAL1=84;
	public static final int STRING_LITERAL2=85;
	public static final int STRING_LITERAL_LONG1=86;
	public static final int STRING_LITERAL_LONG2=87;
	public static final int TRUE=88;
	public static final int UNION=89;
	public static final int VAR1=90;
	public static final int VAR2=91;
	public static final int VARNAME=92;
	public static final int WHERE=93;
	public static final int WS=94;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SparqlParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SparqlParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return SparqlParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g"; }



	// $ANTLR start "query"
	// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:61:1: query : prologue ( selectQuery | constructQuery | describeQuery | askQuery ) EOF ;
	public final void query() throws RecognitionException {
		try {
			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:62:5: ( prologue ( selectQuery | constructQuery | describeQuery | askQuery ) EOF )
			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:62:7: prologue ( selectQuery | constructQuery | describeQuery | askQuery ) EOF
			{
			pushFollow(FOLLOW_prologue_in_query19);
			prologue();
			state._fsp--;

			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:62:16: ( selectQuery | constructQuery | describeQuery | askQuery )
			int alt1=4;
			switch ( input.LA(1) ) {
			case SELECT:
				{
				alt1=1;
				}
				break;
			case CONSTRUCT:
				{
				alt1=2;
				}
				break;
			case DESCRIBE:
				{
				alt1=3;
				}
				break;
			case ASK:
				{
				alt1=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:62:18: selectQuery
					{
					pushFollow(FOLLOW_selectQuery_in_query23);
					selectQuery();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:62:32: constructQuery
					{
					pushFollow(FOLLOW_constructQuery_in_query27);
					constructQuery();
					state._fsp--;

					}
					break;
				case 3 :
					// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:62:49: describeQuery
					{
					pushFollow(FOLLOW_describeQuery_in_query31);
					describeQuery();
					state._fsp--;

					}
					break;
				case 4 :
					// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:62:65: askQuery
					{
					pushFollow(FOLLOW_askQuery_in_query35);
					askQuery();
					state._fsp--;

					}
					break;

			}

			match(input,EOF,FOLLOW_EOF_in_query39); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "query"



	// $ANTLR start "prologue"
	// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:65:1: prologue : ( baseDecl )? ( prefixDecl )* ;
	public final void prologue() throws RecognitionException {
		try {
			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:66:5: ( ( baseDecl )? ( prefixDecl )* )
			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:66:7: ( baseDecl )? ( prefixDecl )*
			{
			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:66:7: ( baseDecl )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==BASE) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:66:7: baseDecl
					{
					pushFollow(FOLLOW_baseDecl_in_prologue56);
					baseDecl();
					state._fsp--;

					}
					break;

			}

			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:66:17: ( prefixDecl )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==PREFIX) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:66:17: prefixDecl
					{
					pushFollow(FOLLOW_prefixDecl_in_prologue59);
					prefixDecl();
					state._fsp--;

					}
					break;

				default :
					break loop3;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prologue"



	// $ANTLR start "baseDecl"
	// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:69:1: baseDecl : BASE IRI_REF ;
	public final void baseDecl() throws RecognitionException {
		try {
			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:70:5: ( BASE IRI_REF )
			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:70:7: BASE IRI_REF
			{
			match(input,BASE,FOLLOW_BASE_in_baseDecl77); 
			match(input,IRI_REF,FOLLOW_IRI_REF_in_baseDecl79); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "baseDecl"



	// $ANTLR start "prefixDecl"
	// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:73:1: prefixDecl : PREFIX PNAME_NS IRI_REF ;
	public final void prefixDecl() throws RecognitionException {
		try {
			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:74:5: ( PREFIX PNAME_NS IRI_REF )
			// /home/yasima/Acacia/x10dt/workspace/Acacia/src/org/acacia/rdf/sparql/Sparql.g:74:7: PREFIX PNAME_NS IRI_REF
			{
			match(input,PREFIX,FOLLOW_PREFIX_in_prefixDecl96); 
			match(input,PNAME_NS,FOLLOW_PNAME_NS_in_prefixDecl98); 
			match(input,IRI_REF,FOLLOW_IRI_REF_in_prefixDecl100); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prefixDecl"


